fix: solve class conflict, fix padding and spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,26 +23,27 @@ body {
 
 /* #region overlay */
 .overlay {
-    
+
     /* RICORDA: potresti doverla cambiare */
     position: fixed;
     background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 100%;
     z-index: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 
     .button {
-        padding: 1rem 0;
+        padding: 2rem 0;
+        text-align: center;
 
         .close {
-            padding: .5rem;
+            padding: .25rem .5rem;
             font-size: large;
-            font-family: Arial, Helvetica, sans-serif
+            font-family: Arial, Helvetica, sans-serif;
         }
+    }
+
+    .image {
+        text-align: center;
     }
 }
 
